--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <h1>Hello JS</h1>
 <script>
 console.log("Hello world!");
-console.log("추가된 내용");
+console.log("추가된 내용2");
 </script>
 </body>
 </html>
